# fates

./: CMakeLists.txt  INSTALL  README.md  configure-fates  load_env_var_amanziats  load_env_var_openmpi
biogeophys/: FatesPlantHydraulicsMod.F90
c_driver/: Makefile  c_driver.c
interface/: atsfates_interfaceMod.F90  atsfates_paraminterfaceMod.F90
main/: CMakeLists.txt  EDPftvarcon.F90  EDTypesMod.F90  FatesHistoryInterfaceMod.F90  FatesInterfaceMod.F90  histFileMod.F90
parteh/: CMakeLists.txt
shared/: CMakeLists.txt  abortutils.F90  shr_infnan_mod.F90  shr_pio_mod.F90
shared/pio/: fileutils.F90  ncdio_pio.F90  paramUtilMod.F90
